Right align see more to avoid it clashing with logos
https://www.pivotaltracker.com/story/show/53227383

--- a/app/assets/stylesheets/frontend/views/_html-publications.scss
+++ b/app/assets/stylesheets/frontend/views/_html-publications.scss
@@ -29,6 +29,7 @@
         p {
           position: absolute;
           bottom: 2px;
+          right: 0;
         }
       }
     }
